--- a/LocMessApp/app/src/main/res/layout/my_posts_list_group.xml
+++ b/LocMessApp/app/src/main/res/layout/my_posts_list_group.xml
@@ -1,33 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layout_post"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:gravity="center_vertical">
+    android:orientation="vertical">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/text1"
-            android:textSize="15dp"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="35dp"
+            android:layout_weight="1"
             android:gravity="center_vertical"
             android:text="TextView"
-            android:textColor ="#000000"/>
+            android:textColor="#000000"
+            android:textSize="15dp" />
 
-        <Button android:id="@+id/button1"
+        <ImageView
+            android:id="@+id/imageView2"
             android:layout_width="wrap_content"
-            android:layout_height="45dp"
+            android:layout_height="match_parent"
+            android:padding="16dp"
+            android:scaleType="center"
+            app:srcCompat="@drawable/ic_place_black_24dp" />
+
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:layout_marginLeft="95dp"
+            android:backgroundTint="@android:color/holo_red_dark"
             android:focusable="false"
-            android:text="Delete" />
+            android:text="X"
+            android:textColor="@color/common_google_signin_btn_text_dark_default"
+            android:textSize="18sp" />
 
-    </RelativeLayout>
+    </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
